--- a/build.xml
+++ b/build.xml
@@ -56,7 +56,7 @@
 		<delete file="${env.CATALINA_HOME}/webapps/myapp.war"/>
 		<delete dir="${env.CATALINA_HOME}/webapps/myapp"/>
 		<copy file="build/war/myapp.war" tofile="${env.CATALINA_HOME}/webapps/myapp.war"/>
-		<exec executable="${env.CATALINA_HOME}/bin/startup.sh" spawn="true" >
+		<exec executable="${env.CATALINA_HOME}/bin/startup.sh" >
 			<arg value="start"/>
 		</exec>
 	</target>
