--- a/build.xml
+++ b/build.xml
@@ -24,9 +24,14 @@
 
 	<target name="compile" depends="svnversion">
 		<mkdir dir="build/classes" />
-		<javac srcdir="src" destdir="build/classes" >
+		<javac srcdir="src/main/java" destdir="build/classes" >
 			<classpath refid="class.path"/>
 		</javac>
+		<copy todir="build/classes">
+		  <fileset dir="src/main/resources">
+		    <include name="**/*.properties"/>
+		  </fileset>
+		</copy>		
 	</target>
 
 	<target name="jar" depends="clean,compile">
