--- a/build.xml
+++ b/build.xml
@@ -38,7 +38,7 @@
 		</propertyfile>
 	</target>
 		
-	<target name="compile" depends="git-revision">
+	<target name="compile">
 		<mkdir dir="build/classes" />
 		<javac srcdir="src/main/java" destdir="build/classes" >
 			<classpath refid="class.path"/>
